--- a/app/design/frontend/rwd/ainstainer/template/ainstainer/contacts.phtml
+++ b/app/design/frontend/rwd/ainstainer/template/ainstainer/contacts.phtml
@@ -1,3 +1,4 @@
+<div id="map" style="width: 100%; height: 500px"></div>
 <form>
     <div class="form-group">
         <label for="email">Email address</label>
@@ -18,4 +19,8 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=<?= $this->getGoogleApiKey() ?>&callback=initMap">
+</script>
 
