--- a/app/design/frontend/rwd/ainstainer/template/ainstainer/banners.phtml
+++ b/app/design/frontend/rwd/ainstainer/template/ainstainer/banners.phtml
@@ -3,3 +3,9 @@
         <img class="inline border" src="<?= $this->_src ?>">
     <?php endfor; ?>
 </div>
+
+<div>
+    <?php //@TODO: EAV_PRODUCT_ATTRIBUTE
+    //var_dump($this->productBanners())
+    ?>
+</div>
