--- a/app/design/frontend/rwd/ainstainer/template/ainstainer/contacts.phtml
+++ b/app/design/frontend/rwd/ainstainer/template/ainstainer/contacts.phtml
@@ -1,20 +1,20 @@
 <div id="map" style="width: 100%; height: 500px"></div>
-<form>
+<form method="post" action="<?php echo $this->getUrl('*/*/create') ?>">
     <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="Email">
+        <input name="email" type="email" class="form-control" id="email" placeholder="Email">
     </div>
     <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Name">
+        <input name="name" type="text" class="form-control" id="name" placeholder="Name">
     </div>
     <div class="form-group">
-        <label for="telephone">Telephone</label>
-        <input type="tel" class="form-control" id="telephone" placeholder="+38(095)9850477">
+        <label for="phone">Phone</label>
+        <input name="phone" type="tel" class="form-control" id="phone" placeholder="+38(095)9850477">
     </div>
     <div class="form-group">
         <label for="description">Description</label>
-        <textarea rows="3" class="form-control" id="description" placeholder="Description"></textarea>
+        <textarea name="description" rows="3" class="form-control" id="description" placeholder="Description"></textarea>
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
