add module with custom shipping method

--- a/app/design/frontend/rwd/ainstainer/template/ainstainer/banners.phtml
+++ b/app/design/frontend/rwd/ainstainer/template/ainstainer/banners.phtml
@@ -6,6 +6,6 @@
 
 <div>
     <?php //@TODO: EAV_PRODUCT_ATTRIBUTE
-    //var_dump($this->productBanners())
+    var_dump($this->productBanners())
     ?>
 </div>
